src/tests/errors/staticanalysis/naming/procedure_no_return_fail.cmp
program procedure_no_return_fail
begin
    proc main()
    begin 
    in
    end;

    proc test() : string
    begin
    in
        /* Fail: No return statement. */
    end
end